--- a/Secretariat_Soft/Secretariat_Soft.csproj
+++ b/Secretariat_Soft/Secretariat_Soft.csproj
@@ -9,10 +9,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AnalogClockCore\AnalogClockCore.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="DataSet\Letters.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Letters.xsd</DependentUpon>
+    </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -25,6 +34,13 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="DataSet\Letters.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Letters.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
 
 </Project>
