--- a/Secretariat_Soft/App.config
+++ b/Secretariat_Soft/App.config
@@ -8,9 +8,12 @@
     <userSettings>
         <Secretariat_Soft.Properties.Settings>
             <setting name="User_name" serializeAs="String">
-                <value>Igor</value>
+                <value>Admin</value>
             </setting>
             <setting name="User_Id" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="admin_user_id" serializeAs="String">
                 <value>1</value>
             </setting>
         </Secretariat_Soft.Properties.Settings>
