--- a/Secretariat_Soft/Properties/Settings.settings
+++ b/Secretariat_Soft/Properties/Settings.settings
@@ -3,9 +3,12 @@
   <Profiles />
   <Settings>
     <Setting Name="User_name" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Igor</Value>
+      <Value Profile="(Default)">Admin</Value>
     </Setting>
     <Setting Name="User_Id" Type="System.Int64" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
+    <Setting Name="admin_user_id" Type="System.Int64" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
   </Settings>
