--- a/Secretariat_Soft/App.config
+++ b/Secretariat_Soft/App.config
@@ -16,6 +16,9 @@
             <setting name="admin_user_id" serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="selected_bg_name" serializeAs="String">
+                <value>0.jpg</value>
+            </setting>
         </Secretariat_Soft.Properties.Settings>
     </userSettings>
 </configuration>
