--- a/Secretariat_Soft/Properties/Settings.settings
+++ b/Secretariat_Soft/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="admin_user_id" Type="System.Int64" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
+    <Setting Name="selected_bg_name" Type="System.String" Scope="User">
+      <Value Profile="(Default)">0.jpg</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
