Load report for InList form

--- a/Secretariat_Soft/Secretariat_Soft.csproj
+++ b/Secretariat_Soft/Secretariat_Soft.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AnalogClockCore\AnalogClockCore.csproj" />
+    <ProjectReference Include="..\MyRep\MyRep.csproj" />
   </ItemGroup>
 
   <ItemGroup>
