--- a/Secretariat_Soft/Secretariat_Soft.csproj
+++ b/Secretariat_Soft/Secretariat_Soft.csproj
@@ -8,15 +8,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationIcon>arcb.ico</ApplicationIcon>
     <AssemblyName>SOS_Computer_Group</AssemblyName>
-    <Version>2024.1.20-Beta1</Version>
+    <Version>2024.1.20-beta</Version>
     <Authors>Iggy</Authors>
-    <Company>SoS_Group</Company>
+    <Company>SoS Group</Company>
     <Product>Secretariat Software</Product>
     <Description>----</Description>
     <Copyright>@ 2020-2024 All right reserved</Copyright>
     <FileVersion>2024.1.20.1</FileVersion>
     <AssemblyVersion>2024.1.20.1</AssemblyVersion>
-    <NeutralLanguage>en-001</NeutralLanguage>
   </PropertyGroup>
 
   <ItemGroup>
