Save custom SQL connection string

--- a/Secretariat_Soft/App.config
+++ b/Secretariat_Soft/App.config
@@ -5,6 +5,11 @@
             <section name="Secretariat_Soft.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
+    <connectionStrings>
+        <add name="Secretariat_Soft.Properties.Settings.main_con_string"
+            connectionString="Data Source=DESKTOP-8R3MVUS\SQLEXPRESS01;Initial Catalog=CsApps;Persist Security Info=True;User ID=igo;Password=12345;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <userSettings>
         <Secretariat_Soft.Properties.Settings>
             <setting name="User_name" serializeAs="String">
@@ -18,6 +23,9 @@
             </setting>
             <setting name="selected_bg_name" serializeAs="String">
                 <value>0.jpg</value>
+            </setting>
+            <setting name="main_con_text" serializeAs="String">
+                <value>Data Source=DESKTOP-8R3MVUS\SQLEXPRESS01;Initial Catalog=CsApps;Persist Security Info=True;User ID=igo;Password=12345;TrustServerCertificate=True</value>
             </setting>
         </Secretariat_Soft.Properties.Settings>
     </userSettings>
