C# code to load custom connection string

--- a/Secretariat_Soft/App.config
+++ b/Secretariat_Soft/App.config
@@ -27,6 +27,9 @@
             <setting name="main_con_text" serializeAs="String">
                 <value>Data Source=DESKTOP-8R3MVUS\SQLEXPRESS01;Initial Catalog=CsApps;Persist Security Info=True;User ID=igo;Password=12345;TrustServerCertificate=True</value>
             </setting>
+            <setting name="is_sql_auth" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Secretariat_Soft.Properties.Settings>
     </userSettings>
 </configuration>
