--- a/Secretariat_Soft/Properties/Settings.settings
+++ b/Secretariat_Soft/Properties/Settings.settings
@@ -25,5 +25,8 @@
     <Setting Name="main_con_text" Type="System.String" Scope="User">
       <Value Profile="(Default)">Data Source=DESKTOP-8R3MVUS\SQLEXPRESS01;Initial Catalog=CsApps;Persist Security Info=True;User ID=igo;Password=12345;TrustServerCertificate=True</Value>
     </Setting>
+    <Setting Name="is_sql_auth" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
